--- a/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
@@ -122,6 +122,12 @@ Read more about project organization in the [Project Organization](../../core-de
 
 </Alert>
 
+## Modify Cloud Infrastructure
+
+Although the cloud infrastructure resources that Webiny deploys are already configured in the best possible manner, there are still cases where some modifications might be needed. In some cases even, the deployed cloud infrastructure needs to be expanded by introducing additional resources into the mix.
+
+To learn more, please check out the [Modify Cloud Infrastructure](/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure) article.
+
 ## Debugging
 
 If you run into an error while running the `webiny deploy` command, to get additional information and logs about it, you can append the `--debug` argument. For example:
