feat: add section related to modifying deployed cloud infra

--- a/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
@@ -49,7 +49,7 @@ To completely deploy your project, simply run the following command in your term
 yarn webiny deploy
 ```
 
-This command deploys all of the three applications that are, by default, included in every Webiny project. It deploys them in the following order:
+This command deploys all of the four applications that are, by default, included in every Webiny project. It deploys them in the following order:
 
 1. **Core** (`./apps/core`) - defines core cloud infrastructure resources
 1. **API** (`./apps/api`) - your project's (GraphQL) HTTP API
@@ -75,14 +75,17 @@ yarn webiny deploy --env prod
 To deploy a specific project application, located within your Webiny project, simply append the path to the folder in which the project application resides, for example:
 
 ```bash
+yarn webiny deploy apps/core --env dev
 yarn webiny deploy apps/api --env dev
 yarn webiny deploy apps/admin --env dev
 yarn webiny deploy apps/website --env dev
 ```
 
-Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
+Note that when deploying a specific project application, the environment (`--env`) parameter is not optional. It must always be provided.
 
-## List AWS Resources
+Also, note that the four project applications depend on each other. **Website** and **Admin** depend on **API**, and **API** depends on the **Core** project application. So, when performing a Webiny project deployment for the first time, if you choose to deploy project applications one by one, make sure to deploy them in the correct order, as shown in the list of commands above.
+
+## List Cloud Infrastructure Resources
 
 To list all cloud infrastructure resources deployed as part of a particular project application, you can run the following command:
 
@@ -117,7 +120,7 @@ For more information on the `webiny pulumi` command, please visit the [Execute P
 
 <Alert type="success">
 
-By default, every Webiny project consists of three project applications: **API** (`apps/api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`).
+By default, every Webiny project consists of four project applications: **Core** (`apps/api`), **API** (`apps/api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`).
 Read more about project organization in the [Project Organization](../../core-development-concepts/project-organization/project-applications-and-packages) key topics section.
 
 </Alert>
