--- a/src/docs/shared/release-management/unstable-releases.mdx
+++ b/src/docs/shared/release-management/unstable-releases.mdx
@@ -15,10 +15,21 @@ As described in the [Branching Strategy](/docs/release-management/branching-stra
 
 ## Setup the Unstable Release
 
-The process of setting up an unstable release is the same as creating a regular Webiny project, described in the [Install Webiny](/docs/{version}/get-started/install-webiny) article. The only difference is in the `create-webiny-project` command. The following is the command you need to use to create an unstable project: 
+<Alert type="danger" title={"READ THIS BEFORE CONTINUING!"}>
+
+  An unstable release is exactly that: no guarantees, bleeding edge, potentially broken, and
+  any API can change before becoming stable.
+
+  We highly recommend **against** using this release in
+  production, as we cannot guarantee that projects created with this release will be upgradeable to
+  stable releases.
+
+</Alert>
+
+The process of setting up an unstable release is the same as creating a regular Webiny project, described in the [Install Webiny](/docs/{version}/get-started/install-webiny) article. The only difference is in the `create-webiny-project` command. The following is the command you need to use to create an unstable project:
 
 ```bash
 npx create-webiny-project@unstable my-new-project --tag=unstable
 ```
 
-From this point on, the process is identical to our [regular project setup](/docs/{version}/get-started/install-webiny#pick-your-database). 
+From this point on, the process is identical to our [regular project setup](/docs/{version}/get-started/install-webiny#pick-your-database).
