docs: added the initial draft of user guide structure

--- a/src/docs/5.28.x/user-guides/introduction.mdx
+++ b/src/docs/5.28.x/user-guides/introduction.mdx
@@ -1,18 +1,18 @@
 ---
-title: Introduction
-description: In this article, you'll learn about the Form Builder theme.
+title: Overview
+description: Overview of Webiny CMS the enterprise open-source serverless CMS.
 ---
+import webinyOverview from "./assets/webiny-overview.mp4";
 
-<Alert type="success" title="What You’ll Learn">
+<Video src={webinyOverview} controls={true}/>
 
-- what is a Form Builder theme
-- how a theme is used in Form Builder
-- how to register a Form Builder theme
+Webiny Serverless CMS includes:
 
-</Alert>
+1️⃣ **Page Builder** - Drag&drop page editor. Pages are prerendered automatically and cached on CloudFront for lightning-fast delivery.
 
-## Overview
+2️⃣ **Headless CMS** - Headless CMS with a GraphQL API. Build APIs and content models through a UI. It includes content revisions, localization, and fine-grain permission control.
 
-In this section, you learn all about the Form Builder theme and its basic concepts. You get all the knowledge needed to create your own theme.
+3️⃣ **File Manager** - Upload files images. Search and organize your assets. It includes a built-in image editor for basic image manipulations.
 
-When you're creating forms in the Form Builder, you have the option to preview forms right there inside the same interface.
+4️⃣ **Form Builder** - Build forms with a drag&drop editor. Insert forms through Page Builder into your pages. It has webhook support and ReCaptcha integration.
+
