fix: update outdated info

--- a/src/docs/5.29.x/page-builder/extending/create-a-page-element.mdx
+++ b/src/docs/5.29.x/page-builder/extending/create-a-page-element.mdx
@@ -136,8 +136,8 @@ After successfully performing the above-mentioned steps, the folder structure of
 ```
 // Config files are omitted for sake of brevity.
 
-├── api
 ├── apps
+│   ├── api
 │   ├── admin
 │   ├── extensions
 │   │   └── pb-element-iFrame
