feat: add "PreconditionFailed" troubleshooting item

--- a/src/docs/5.29.x/infrastructure/basics/destroy-cloud-infrastructure.mdx
+++ b/src/docs/5.29.x/infrastructure/basics/destroy-cloud-infrastructure.mdx
@@ -108,6 +108,30 @@ yarn webiny destroy apps/website --env prod
 
 ## Troubleshooting
 
+### Upon destroying my Webiny project, I've received a "PreconditionFailed" error message. What can I do?
+
+On multiple occasions, we've seen users receive the following error upon destroying their Webiny project:
+
+```text
+  pulumi:pulumi:Stack (website-dev):
+    error: update failed
+ 
+  aws:cloudfront:Distribution (delivery):
+    error: deleting urn:pulumi:dev::website::aws:cloudfront/distribution:Distribution::delivery: 1 error occurred:
+        * CloudFront Distribution {DISTRIBUTION_ID} cannot be deleted: PreconditionFailed: The request failed because it didn't meet the preconditions in one or more request-header fields.
+        status code: 412, request id: {REQUEST_ID}
+```
+
+As we can see, the error is related to deleting an Amazon Cloudfront distribution that's deployed as part of the **Website** project application. 
+
+As mentioned in [this GitHub issue](https://github.com/pulumi/pulumi-aws/issues/308#issuecomment-415928729), this error can happen because of the fact that many operations within AWS silently mutate Cloudfront distributions' [ETAG](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/RequestAndResponseBehaviorCustomOrigin.html). This causes the subsequent update (delete) attempts to fail.
+
+Ultimately, this issue can be resolved by refreshing your Pulumi state files, by running the following command: 
+
+```bash
+yarn webiny pulumi apps/website --env dev -- refresh --skip-preview --yes
+```
+
 ### Destroying my project takes a long time to finish.
 
 We're aware of this fact, and this is mainly because of the [Amazon ElasticSearch Service](https://aws.amazon.com/elasticsearch-service/). While other cloud infrastructure resources get destroyed reasonably fast, this service can take anywhere from 15 to 30 minutes to destroy itself. In rare cases, we've even seen the service still present in user's account [for days](https://forums.aws.amazon.com/thread.jspa?threadID=233859).
